--- a/index.html
+++ b/index.html
@@ -4,11 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="resources/styles/style.css">
-    <link rel="stylesheet" href="resources/styles/mobile-s.css">
+    <link rel="stylesheet" media="only screen and (min-width: 250px) and (max-width: 321px)" href="resources/styles/mobile-s.css">
+    <link rel="stylesheet" media="only screen and (min-width: 321px) and (max-width: 376px)" href="resources/styles/mobile-m.css">
+    <link rel="stylesheet" media="only screen and (min-width: 376px) and (max-width: 426px)" href="resources/styles/mobile-l.css">
+    <link rel="stylesheet" media="only screen and (min-width: 426px) and (max-width: 769px)" href="resources/styles/tablet.css">
+    <link rel="stylesheet" media="only screen and (min-width: 769px) and (max-width: 1025px)" href="resources/styles/laptop.css">
+    <link rel="stylesheet" media="only screen and (min-width: 1025px) and (max-width: 1441px)" href="resources/styles/laptop-l.css">
+    <link rel="stylesheet" media="only screen and (min-width: 1441px) and (max-width: 2561px)" href="resources/styles/4k.css">
     <title>GitHub</title>
 </head>
 <body>
-    <div class="navbar">
+    <div class="navbar indcate">
         <div class="navbar-left-side">
             <div class="hand-burger-holder">
                 <svg viewBox="0 0 16 16">
@@ -23,7 +29,7 @@
             </div>
     
             <div class="brand-banner-text-holder">
-                <a href="#">Dashboard</a>
+                <a href="#">Dashboard</a> 
             </div>
         </div>
 
@@ -38,9 +44,15 @@
                 </span>
             </div>
 
+            <div class="hand-burger-holder search-btn">
+                <svg viewBox="0 0 16 16">
+                    <path d="M10.68 11.74a6 6 0 0 1-7.922-8.982 6 6 0 0 1 8.982 7.922l3.04 3.04a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215ZM11.5 7a4.499 4.499 0 1 0-8.997 0A4.499 4.499 0 0 0 11.5 7Z"></path>
+                </svg>
+            </div>
+
             <div class="vertical-seperation"></div>
 
-            <div class="hand-burger-holder">
+            <div class="hand-burger-holder add-or-select-option">
                 <svg aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1" width="16" data-view-component="true" class="octicon octicon-plus">
                     <path d="M7.75 2a.75.75 0 0 1 .75.75V7h4.25a.75.75 0 0 1 0 1.5H8.5v4.25a.75.75 0 0 1-1.5 0V8.5H2.75a.75.75 0 0 1 0-1.5H7V2.75A.75.75 0 0 1 7.75 2Z"></path>
                 </svg>
@@ -49,13 +61,13 @@
                 </svg>
             </div>
 
-            <div class="hand-burger-holder">
+            <div class="hand-burger-holder issues-btn">
                 <svg aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1" width="16" data-view-component="true" class="octicon octicon-issue-opened Button-visual">
                     <path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3Z"></path><path d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0ZM1.5 8a6.5 6.5 0 1 0 13 0 6.5 6.5 0 0 0-13 0Z"></path>
                 </svg>
             </div>
 
-            <div class="hand-burger-holder">
+            <div class="hand-burger-holder pull-request-btn sample">
                 <svg aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1" width="16" data-view-component="true" class="octicon octicon-git-pull-request Button-visual">
                     <path d="M1.5 3.25a2.25 2.25 0 1 1 3 2.122v5.256a2.251 2.251 0 1 1-1.5 0V5.372A2.25 2.25 0 0 1 1.5 3.25Zm5.677-.177L9.573.677A.25.25 0 0 1 10 .854V2.5h1A2.5 2.5 0 0 1 13.5 5v5.628a2.251 2.251 0 1 1-1.5 0V5a1 1 0 0 0-1-1h-1v1.646a.25.25 0 0 1-.427.177L7.177 3.427a.25.25 0 0 1 0-.354ZM3.75 2.5a.75.75 0 1 0 0 1.5.75.75 0 0 0 0-1.5Zm0 9.5a.75.75 0 1 0 0 1.5.75.75 0 0 0 0-1.5Zm8.25.75a.75.75 0 1 0 1.5 0 .75.75 0 0 0-1.5 0Z"></path>
                 </svg>
